# 2048-COP-3003-Project

./: README.md
2048-game/: CMakeLists.txt
